animation shake; toast after one answer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Magic Ball</string>
     <string name="greeting">Вопрос?</string>
+    <string name="oneQuestionOnly">Слишком много вопросов...</string>
     <string-array name="messages">
         <item>Да</item>
         <item>Нет</item>
